@@ -2,13 +2,13 @@
 import java.util.List;
 
 public class ElectricPokemon extends Pokemon {
-    public Electric Pokemon(String name, int level, int hp, String food, String sound) {
-        super(name, level, hp, food, sound, "electric", Arrays.asList("Thunder Punch", "Electro Ball", "Thunder", "Volt Tackle"));
+    public ElectricPokemon(String name, int level, int hp, String food, String sound) {
+        super(name, level, hp, food, sound, "electric", List.of("Thunder Punch", "Electro Ball", "Thunder", "Volt Tackle"));
     }
     public void thunderPunch(Pokemon attacker, Pokemon defender) {
         //Implement thunder punch attack
     }
-    public void electricBall(Pokemon attacker, Pokemon defender) {
+    public void electroBall(Pokemon attacker, Pokemon defender) {
         //Implement electric ball attack
     }
     public void thunder(Pokemon attacker, Pokemon defender) {
