@@ -5,21 +5,21 @@ import java.util.List;
 
 
 public class FirePokemon extends Pokemon {
-    private List<String> attacks = Arrays.asList("inferno", "pyroBall", "fireLash", "flameThrower
+    private List<String> attacks = Arrays.asList("inferno", "pyroBall", "fireLash", "flameThrower");
 
     public FirePokemon(String name, int level, int hp, String food, String sound) {
-        super(name, level, hp, food, sound, "fire", Arrays.asList("Inferno", "Pyro Ball", "Fire Lash", "Flame Thrower"));
+        super(name, level, hp, food, sound, "fire", List.of("Inferno", "Pyro Ball", "Fire Lash", "Flame Thrower"));
     }
-    public void inferno(Pokemon attacker, Pokemon defender) {
+    public void inferno(Pokemon name, Pokemon enemy) {
         //Implement inferno attack
     }
-    public void pyroBall(Pokemon attacker, Pokemon defender) {
+    public void pyroBall(Pokemon name, Pokemon enemy) {
         //Implement pyro ball attack
     }
-    public void fireLash(Pokemon attacker, Pokemon defender) {
+    public void fireLash(Pokemon name, Pokemon enemy) {
         //Implement attack fire lash attack
     }
-    public void flameThrower(Pokemon attacker, Pokemon defender) {
+    public void flameThrower(Pokemon name, Pokemon enemy) {
         //Implement flame thrower attack
     }
 }
